<resources>
    <string name="app_name">LacosFlores</string>
    <string name="titulo_app">Laços Flores</string>
    <string name="user">Usuário</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home_pedido">HomePedido</string>
    <string name="n_de_pedidos">Nº de Pedidos</string>
    <string name="informe_o_n_mero">Informe o número</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="informe_sobrenome">Informe sobrenome</string>
    <string name="nome">Nome:</string>
    <string name="n_mero">Número:</string>
    <string name="sobrenome">Sobrenome:</string>
    <string name="enviar">Enviar</string>
    <string name="limpar">Limpar</string>
    <string name="c_digo">Código</string>
    <string name="cliente">Cliente</string>
    <string name="codigo">Codigo</string>
    <string name="numero">Número</string>
    <string name="senha">Senha</string>
    <string name="voltar">Voltar</string>
    <string name="encerrar_pedido">Encerrar pedido</string>
    <string name="nome_do_cliente">Nome do cliente</string>
    <string name="numero_do_dispositivo">Número do dispositivo</string>
    <string name="btn_voltar">Voltar</string>
    <string name="Login">Login</string>
    <string name="textview">TextView</string>
    <string name="imei">IMEI</string>

</resources>
