<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_app"
    tools:ignore="MissingConstraints">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        tools:ignore="ContentDescription"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/encerrar_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edEncerramento"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="roboto"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:text="@string/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edNome"
        android:textSize="20sp"
        android:ems="10"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/txtNome"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtNome"
        app:layout_constraintVertical_bias="0.45"
        tools:layout_editor_absoluteX="33dp" />

    <EditText
        android:layout_width="209dp"
        android:layout_height="44dp"
        android:inputType="textPersonName"
        android:ems="10"
        tools:layout_editor_absoluteY="168dp"
        tools:layout_editor_absoluteX="134dp"
        android:id="@+id/txtNome"
        android:hint="@string/nome_do_cliente" />

    <TextView
        android:text="@string/n_mero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:ems="10"
        android:id="@+id/edNum"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@+id/txtNum"
        app:layout_constraintBottom_toBottomOf="@+id/txtNum"
        app:layout_constraintVertical_bias="0.55"
        tools:layout_editor_absoluteX="33dp" />

    <EditText
        android:layout_width="209dp"
        android:layout_height="44dp"
        android:inputType="phone"
        android:ems="10"
        android:layout_margin="8dp"
        android:id="@+id/txtNum"
        android:hint="@string/numero_do_dispositivo"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="233dp"
        android:padding="8dp" />

    <Button
        android:text="@string/enviar"
        android:layout_width="143dp"
        android:layout_height="55dp"
        android:id="@+id/btnEnvia"
        app:layout_constraintTop_toTopOf="@+id/btnVoltar"
        app:layout_constraintBottom_toBottomOf="@+id/btnVoltar"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:background="@color/colorPrimary" />

    <Button
        android:text="@string/btn_voltar"
        android:layout_width="144dp"
        android:layout_height="55dp"
        android:id="@+id/btnVoltar"
        tools:layout_editor_absoluteY="376dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/colorPrimary" />




</android.support.constraint.ConstraintLayout>